--- a/Exercise2_Healthcare-dataset-stroke-data.ipynb
+++ b/Exercise2_Healthcare-dataset-stroke-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 209,
    "id": "b5c2860d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 210,
    "id": "3879f557",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "[5110 rows x 12 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 211,
    "id": "871414b9",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "(5110, 12)"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 212,
    "id": "0af555b5",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "[5110 rows x 11 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 213,
    "id": "b0aefb46",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 214,
    "id": "45328bfa",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 215,
    "id": "d898df71",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 216,
    "id": "80a21dc5",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 217,
    "id": "a6101b20",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "(4909, 11)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 218,
    "id": "14473ed1",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,8 +708,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "8d8ad47a",
+   "execution_count": 219,
+   "id": "45c841bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "Female    2897\n",
+       "Male      2011\n",
+       "Other        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check value counts for gender before modifying ordinal categories\n",
+    "df['gender'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "062f6412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "Female    2897\n",
+       "Male      2011\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove the row where gender= Other\n",
+    "df = df[df['gender'] != 'Other']\n",
+    "df['gender'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "c4e85480",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +801,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
        "      <td>67.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -763,7 +815,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
        "      <td>80.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -777,7 +829,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
        "      <td>49.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -791,7 +843,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
        "      <td>79.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -805,7 +857,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
        "      <td>81.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -823,11 +875,11 @@
       ],
       "text/plain": [
        "   gender   age  hypertension  heart_disease  ever_married      work_type  \\\n",
-       "0    Male  67.0             0              1             1        Private   \n",
-       "2    Male  80.0             0              1             1        Private   \n",
-       "3  Female  49.0             0              0             1        Private   \n",
-       "4  Female  79.0             1              0             1  Self-employed   \n",
-       "5    Male  81.0             0              0             1        Private   \n",
+       "0       1  67.0             0              1             1        Private   \n",
+       "2       1  80.0             0              1             1        Private   \n",
+       "3       0  49.0             0              0             1        Private   \n",
+       "4       0  79.0             1              0             1  Self-employed   \n",
+       "5       1  81.0             0              0             1        Private   \n",
        "\n",
        "  Residence_type  avg_glucose_level   bmi   smoking_status  stroke  \n",
        "0          Urban             228.69  36.6  formerly smoked       1  \n",
@@ -837,7 +889,7 @@
        "5          Urban             186.21  29.0  formerly smoked       1  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +898,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# list all variables that can be binary-converted\n",
-    "variables = ['ever_married']\n",
+    "variables = ['ever_married','gender']\n",
     "\n",
     "# load the encoder\n",
     "encoder = LabelEncoder()\n",
@@ -859,206 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "45c841bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gender\n",
-       "Female    2897\n",
-       "Male      2011\n",
-       "Other        1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check value counts for gender before modifying ordinal categories\n",
-    "df['gender'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "id": "062f6412",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "gender\n",
-       "Female    2897\n",
-       "Male      2011\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Remove the row where gender= Other\n",
-    "df = df[df['gender'] != 'Other']\n",
-    "df['gender'].value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "id": "6d401e3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>hypertension</th>\n",
-       "      <th>heart_disease</th>\n",
-       "      <th>ever_married</th>\n",
-       "      <th>work_type</th>\n",
-       "      <th>Residence_type</th>\n",
-       "      <th>avg_glucose_level</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>smoking_status</th>\n",
-       "      <th>stroke</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>228.69</td>\n",
-       "      <td>36.6</td>\n",
-       "      <td>formerly smoked</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>105.92</td>\n",
-       "      <td>32.5</td>\n",
-       "      <td>never smoked</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>171.23</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>smokes</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Self-employed</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>174.12</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>never smoked</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>186.21</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>formerly smoked</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  gender   age  hypertension  heart_disease  ever_married      work_type  \\\n",
-       "0      0  67.0             0              1             1        Private   \n",
-       "2      0  80.0             0              1             1        Private   \n",
-       "3      1  49.0             0              0             1        Private   \n",
-       "4      1  79.0             1              0             1  Self-employed   \n",
-       "5      0  81.0             0              0             1        Private   \n",
-       "\n",
-       "  Residence_type  avg_glucose_level   bmi   smoking_status  stroke  \n",
-       "0          Urban             228.69  36.6  formerly smoked       1  \n",
-       "2          Rural             105.92  32.5     never smoked       1  \n",
-       "3          Urban             171.23  34.4           smokes       1  \n",
-       "4          Rural             174.12  24.0     never smoked       1  \n",
-       "5          Urban             186.21  29.0  formerly smoked       1  "
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Map gender - Ordinal categories\n",
-    "category_mapper = {\n",
-    "'Female': 1,\n",
-    "'Male': 0\n",
-    "}\n",
-    "df['gender'] = df['gender'].replace(category_mapper)\n",
-    "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 222,
    "id": "a0977ccc",
    "metadata": {},
    "outputs": [
@@ -1074,7 +927,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 223,
    "id": "b8dce19f",
    "metadata": {},
    "outputs": [
@@ -1101,7 +954,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 224,
    "id": "fe77d943",
    "metadata": {},
    "outputs": [
@@ -1127,7 +980,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 225,
    "id": "a312bd93",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1033,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>67.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1194,7 +1047,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>80.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1208,7 +1061,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>49.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1222,7 +1075,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>79.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1236,7 +1089,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>81.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1253,12 +1106,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  gender   age  hypertension  heart_disease  ever_married      work_type  \\\n",
-       "0      0  67.0             0              1             1        Private   \n",
-       "2      0  80.0             0              1             1        Private   \n",
-       "3      1  49.0             0              0             1        Private   \n",
-       "4      1  79.0             1              0             1  Self-employed   \n",
-       "5      0  81.0             0              0             1        Private   \n",
+       "   gender   age  hypertension  heart_disease  ever_married      work_type  \\\n",
+       "0       1  67.0             0              1             1        Private   \n",
+       "2       1  80.0             0              1             1        Private   \n",
+       "3       0  49.0             0              0             1        Private   \n",
+       "4       0  79.0             1              0             1  Self-employed   \n",
+       "5       1  81.0             0              0             1        Private   \n",
        "\n",
        "  Residence_type  avg_glucose_level   bmi   smoking_status  stroke  \n",
        "0              1             228.69  36.6  formerly smoked       1  \n",
@@ -1268,7 +1121,7 @@
        "5              1             186.21  29.0  formerly smoked       1  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 226,
    "id": "369b1ca9",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1154,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
