added data set link

--- a/Exercise2_synthetic_asthma_dataset.ipynb
+++ b/Exercise2_synthetic_asthma_dataset.ipynb
@@ -25,6 +25,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b13cdae",
+   "metadata": {},
+   "source": [
+    "https://www.kaggle.com/datasets/sumedh1507/asthma-dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1355,
    "id": "a7657f4e",
