Added dataset link

--- a/Exercise2_synthetic_asthma_dataset.ipynb
+++ b/Exercise2_synthetic_asthma_dataset.ipynb
@@ -29,6 +29,7 @@
    "id": "5b13cdae",
    "metadata": {},
    "source": [
+    "Data set link\n",
     "https://www.kaggle.com/datasets/sumedh1507/asthma-dataset"
    ]
   },
