--- a/Exercise2_synthetic_asthma_dataset.ipynb
+++ b/Exercise2_synthetic_asthma_dataset.ipynb
@@ -3835,43 +3835,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "d84edd47",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9651018538488054"
-      ]
-     },
-     "execution_count": 220,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The AUC score is a super sensitive metric\n",
-    "# you often get low scores, even 0.5\n",
-    "\n",
-    "# in binary logistic regression, AUC values are often interpreted as follows:\n",
-    "# A binary classifier is useful only when it achieves ROC-AUC score greater than 0.5 and as near to 1 as possible. \n",
-    "# If a classifier yields a score less than 0.5, it simply means that the model is performing worse \n",
-    "# than a random classifier, and therefore is useless.\n",
-    "\n",
-    "# In multinomial logistic regression , AUC values are often interpreted as follows: \n",
-    "# 0.5-0.6 (failed)\n",
-    "# 0.6-0.7 (worthless)\n",
-    "# 0.7-0.8 (poor)\n",
-    "# 0.8-0.9 (good)\n",
-    "# > 0.9 (excellent)\n",
-    "\n",
-    "# basically 0.5 means you could get the same result with just random guessing\n",
-    "roc_auc_score(y_test, model.predict_proba(X_test)[:, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "be4581ea",
    "metadata": {},
@@ -4033,7 +3996,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.10)",
    "language": "python",
    "name": "python3"
   },
